<resources>
    <string name="app_name">Huseyn </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_start">Let’s Start</string>
    <string name="onboarding_title">Task Management &amp; To-Do List</string>
    <string name="onboarding_description">This productive tool is designed to help you better manage your task project-wise conveniently!</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="fullname">Full Name</string>
    <string name="welcome">Welcome to our app</string>
    <string name="dont_have_account">Don’t have an account? <font color="#5F33E1">Register</font></string>
    <string name="already_have_account">Already have an account? <font color="#5F33E1">Login</font></string>
    <string name="login">Login</string>
    <string name="login_description">Welcome back, please login to your account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_title">Login</string>
    <string name="fullname_error">Full name is required</string>
    <string name="fullname_invalid">Full name is invalid</string>
    <string name="email_error">Email is required</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="password_error">Password is required</string>
    <string name="password_length">Password must be at least 6 characters</string>
    <string name="confirm_password_error">Confirm password is required</string>
    <string name="password_not_match">Password does not match</string>
    <string name="register_success">Register success</string>
    <string name="register_failed">Register failed</string>
    <string name="login_success">Login success</string>
    <string name="login_failed">Login failed</string>
    <string name="login_error">Email or password is incorrect</string>
    <string name="to_do_list">To do list</string>
    <string name="done">Done</string>
    <string name="toDo">To Do</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_todo_message">Do you want to delete this task?</string>
    <string name="create_to_do">Create To Do</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="language">Language</string>
    <string name="select">Select</string>
    <string name="select_language">Select language</string>
    <string name="azerbaijan">Azerbaijan</string>
    <string name="prefs_key">zent-app-prefs</string>
    <string name="fullname2">fullName</string>
    <string name="email2">email</string>
    <string name="password2">password</string>

    <array name="languages">
        <item>English</item>
        <item>Azerbaijani</item>
        <item>Turkish</item>
        <item>Russian</item>
    </array>

    <array name="languages_code">
        <item>en</item>
        <item>az</item>
        <item>tr</item>
        <item>ru</item>
    </array>


</resources>